@@ -13,13 +13,6 @@ else
   endif
   VMIX_ROOT = $(realpath $(ThisDir)..)
 endif
-# Need to know which driver to use (should be passed in)
-VMIX_DRIVER = FALSE
-ifeq ($(VMIX_DRIVER),FALSE)
-  VMIX_DRIVER_ERR = TRUE
-else
-  VMIX_DRIVER_O = $(VMIX_DRIVER:$(extension)=.o)
-endif
 
 # Directory to build in
 BLD = $(VMIX_ROOT)/bld
@@ -30,6 +23,18 @@ EXE = $(BLD)/exe/cvmix
 SRC = $(VMIX_ROOT)/src
 SRC_SHARE = $(SRC)/shared
 SRC_DRIVE = $(SRC)/drivers
+
+# Need to know which driver to use (should be passed in)
+VMIX_DRIVER = FALSE
+ifeq ($(VMIX_DRIVER),FALSE)
+  VMIX_DRIVER_NOT_SPECIFIED = TRUE
+else
+  ifeq ($(wildcard $(SRC_DRIVE)/$(VMIX_DRIVER)),)
+    VMIX_DRIVER_NOT_FOUND = TRUE
+  else
+    VMIX_DRIVER_O = $(VMIX_DRIVER:$(extension)=.o)
+  endif
+endif
 
 # File containing information about compiler and netCDF (generated by ./setup)
 ENV_FILE = $(BLD)/.CVMix_env
@@ -168,9 +173,12 @@ check: $(ENV_FILE)
 # The variables FC, NETCDF_INC, NETCDF_LIB, and NETCDF_LINK are read in from
 # CVMix_env. If the file doesn't exist, then the python script "setup" is run
 # to generate the file.
-	@$(if $(VMIX_DRIVER_ERR), echo "ERROR: You must compile using \
+	@$(if $(VMIX_DRIVER_NOT_SPECIFIED), echo "ERROR: You must compile using \
     'make VMIX_DRIVER=[driver]'. Valid choices are:"; \
     ls -1 $(SRC_DRIVE); exit 1)
+	@$(if $(VMIX_DRIVER_NOT_FOUND), echo "ERROR: can not find specified \
+    driver $(VMIX_DRIVER). Valid choices are:"; \
+    ls -1 $(SRC_DRIVE); echo "(The .F90 suffix is necessary.)"; exit 1)
 	$(if $(REBUILD), rm -f $(OBJ)/vmix_output.o $(OBJ)/$(VMIX_DRIVER_O))
 
 $(ENV_FILE):
